[tool.poetry]
name = "test_helper"
version = "0.2.3"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.3"
pydantic = "^1.10.2"
beautifulsoup4 = "^4.11.1"
geopy = "^2.2.0"
wxc-sdk = "^1.8.0"
IMAPClient = "^2.3.1"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
