[tool.poetry]
name = "test_helper"
version = "0.2.8"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.3"
pydantic = "^2.0.0"
beautifulsoup4 = "^4.11.1"
geopy = "^2.2.0"
wxc-sdk = "^1.8.0"
IMAPClient = "^2.3.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
