[project]
name = "test_helper"
version = "0.2.11"
description = ""
authors = [{ name = "Johannes Krohn", email = "jkrohn@cisco.com" }]
requires-python = ">=3.9,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiohttp>=3.8.3,<4",
    "pydantic>=2.0.0,<3",
    "beautifulsoup4>=4.11.1,<5",
    "geopy>=2.2.0,<3",
    "wxc-sdk>=1.8.0,<2",
    "IMAPClient>=2.3.1,<3",
    "python-dotenv>=1.0.0,<2",
    "requests>=2.31.0,<3",
]

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
